tests/ui/composite_control_grants.stderr
error[E0576]: cannot find method or associated constant `GRANTS` in trait `WireControlKind`
 --> tests/ui/composite_control_grants.rs:4:52
  |
4 |     let _ = <LoopContinueKind as WireControlKind>::GRANTS;
  |                                                    ^^^^^^ not found in `WireControlKind`
